--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,8 @@
 # Apache HTTP server 이미지를 바탕으로 컨테이너를 실행한 후
 # http://localhost로 접속했을 때 index.html이 표시되게 만드세요
 
+# /frontend/Dockerfile
 FROM httpd:2.4
+
+# Copy the static content into the container
+COPY ./ /usr/local/apache2/htdocs/
